--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# 設定ファイル
-config.yml
-
 # Python
 __pycache__/
 *.py[cod]
@@ -8,55 +5,41 @@ __pycache__/
 *.so
 .Python
 env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Environments
-.env
-.venv
-env/
 venv/
 ENV/
 env.bak/
 venv.bak/
 
+# Build artifacts
+build/
+dist/
+*.egg-info/
+
+# Deployment packages
+deployment.zip
+*.zip
+
+# Configuration files with sensitive data
+config.yml
+
 # IDE
-.idea/
 .vscode/
+.idea/
 *.swp
 *.swo
+*~
 
 # OS
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
-# 設定ファイル
-config.yml
-
-# ログファイル
+# Logs
 *.log
 
-# Project specific
-switchbot-lambda.zip
-switchbot-lambda/
-deployment.zip
-build/
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
 
+# Virtual environment
+.env
